social links alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   text-align: center;
 }
 .container {
-  max-width: 1440px;
+  max-width: 1500px;
   margin-inline: auto;
   background-color: white;
 }
@@ -446,6 +446,9 @@ footer button:hover {
   }
   .follow-us {
     margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 @media (min-width: 1300px) {
